[gd_scene load_steps=2 format=3 uid="uid://session_activity"]

[ext_resource type="Script" path="res://scripts/session_activity.gd"]

[node name="SessionActivity" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.25, 0.4, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80
size_flags_horizontal = 3

[node name="ProgressLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Progress: 1 / 10"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time: 10:00"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score: 0"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ActivityContainer" type="Control" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnswerContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="SubmitButton" type="Button" parent="AnswerContainer"]
layout_mode = 2
text = "Submit Answer"
theme_override_font_sizes/font_size = 20

[connection signal="pressed" from="AnswerContainer/SubmitButton" to="." method="_on_submit_pressed"]
